reduced padding on the right side of the p tag to prevent horizontal scrolling

--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -397,7 +397,7 @@ body main .body #lesson #pegasiChasvi .daakavshire {
 body main .body #lesson #pegasiChasvi .daakavshire p {
   position: relative;
   font-size: 2rem;
-  padding: 0.8rem 4rem 0.8rem 0.8rem;
+  padding: 0.8rem 2rem 0.8rem 0.8rem;
   border: 1px solid #5890ae;
   border-radius: 0.8rem;
 }
