--- a/static/styles/scss/components/_main.scss
+++ b/static/styles/scss/components/_main.scss
@@ -164,7 +164,6 @@ body {
                         }
                     }
                 }
-
                 #pegasiChasvi {
                     .daakavshire {
                         display: flex;
@@ -174,7 +173,7 @@ body {
                         p {
                             position: relative;
                             font-size: 2rem;
-                            padding: 0.8rem 4rem 0.8rem 0.8rem;
+                            padding: 0.8rem 2rem 0.8rem 0.8rem;
                             border: 1px solid $textBlue;
                             border-radius: 0.8rem;
                         }
